handling python flow complete

--- a/01_Python_Data_Science_Toolkit/02_Getting_Started_with_Python/Exercise/notebooks/python_getting_started_and_datascience_lecture.ipynb
+++ b/01_Python_Data_Science_Toolkit/02_Getting_Started_with_Python/Exercise/notebooks/python_getting_started_and_datascience_lecture.ipynb
@@ -26,6 +26,14 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\hp\\Anaconda3\\lib\\site-packages\\IPython\\core\\display.py:694: UserWarning: Consider using IPython.display.IFrame instead\n",
+      "  warnings.warn(\"Consider using IPython.display.IFrame instead\")\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "<iframe src=\"https://player.vimeo.com/video/278480039\" width=\"800\" height=\"600\" frameborder=\"0\" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>"
@@ -87,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2017-09-25T05:48:54.171197Z",
@@ -101,8 +109,23 @@
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New York\n",
+      "<class 'str'>\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "s='New York'\n",
+    "print(s)\n",
+    "print(type(s))\n",
+    "print(len(s))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -118,15 +141,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "uV_WS1IcZRIi",
     "outputId": "686239c9-00aa-42d2-9513-1a373dae109b"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I Love Icecream\n"
+     ]
+    }
+   ],
+   "source": [
+    "a,b='I Love', 'Icecream'\n",
+    "print(a+' '+b)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -158,15 +192,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "ctl4uWFFZRIs",
     "outputId": "ad47c5b2-39a5-406a-abdc-422f62c9de0b"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n"
+     ]
+    }
+   ],
+   "source": [
+    "s=\"Hello World\"\n",
+    "print(s)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -181,16 +226,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "MJo-hWzGZRIy",
     "outputId": "21e8416f-d098-474b-b616-cd1954fcea2f"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H\n"
+     ]
+    }
+   ],
    "source": [
-    "# Show first element (in this case a letter)\n"
+    "# Show first element (in this case a letter)\n",
+    "print(s[0])"
    ]
   },
   {
@@ -239,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2017-09-20T09:29:42.931594Z",
@@ -253,13 +307,22 @@
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HELLO WORLD\n",
+      "hello world\n"
+     ]
+    }
+   ],
    "source": [
     "## Convert all the element of the string to Upper case..!!\n",
-    "\n",
+    "print(s.upper())\n",
     "\n",
     "## Convert all the element of the string to Lower case..!!\n",
-    "\n"
+    "print(s.lower())\n"
    ]
   },
   {
@@ -286,16 +349,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "aDqoOW_pZRJA",
     "outputId": "e75a9586-073d-4188-bf98-28c2d2cf6c56"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "whats your name?shyam\n"
+     ]
+    }
+   ],
    "source": [
-    "\n"
+    "name=input('whats your name?')\n"
    ]
   },
   {
@@ -315,15 +386,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "mfeCgzQYZRJH",
     "outputId": "d928077a-f912-4e88-b406-8155a70a061f"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello shyam\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_string=\"hello\"\n",
+    "print(my_string+' '+name)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -388,22 +470,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "SDZxDwqWZRJQ",
     "outputId": "41a0938b-9bdd-4ff3-ef97-bf7aab1e2e6e"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False \n",
+      " False\n"
+     ]
+    }
+   ],
    "source": [
     "# given variable\n",
     "name = \"vanilla\"\n",
     "\n",
     "# Code starts here\n",
-    "\n",
+    "list1=[\"Vanilla\", \"Choclate\"]\n",
+    "list2=[\"Oreo\", \"Dark Chocolate\"]\n",
     "# check for memberships\n",
-    "\n",
+    "vanilla=name in list1\n",
+    "oreo=name in list2\n",
+    "print(vanilla,'\\n',oreo)\n",
     "# Display variables\n",
     "\n"
    ]
@@ -446,21 +540,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "y6_S-1huZRJX",
     "outputId": "8cca01f3-11bd-4118-f1b6-446c240b3230"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "# initialize variables\n",
-    "\n",
+    "x1=7\n",
+    "y1=7\n",
+    "x2='Hello'\n",
+    "y2='Hello'\n",
+    "d1={'a':1, 'b':2}\n",
+    "d2={'a':1, 'b':2}\n",
     "\n",
     "\n",
     "# Code starts here\n",
-    "\n"
+    "x1_is_y1=id(x1) is id(y1) \n",
+    "print(x1_is_y1)\n",
+    "x2_is_y2=id(x2) is id(y2)\n",
+    "print(x2_is_y2)\n",
+    "d1_is_d2=id(d1) is id(d2)\n",
+    "print(d1_is_d2)\n"
    ]
   },
   {
@@ -527,16 +641,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "GInFaDkqZRJm",
     "outputId": "d08d7403-42c5-4082-ed4b-a5b9286e25e9"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
-    "# Assign a list to an variable named my_list\n"
+    "# Assign a list to an variable named my_list\n",
+    "my_list=[1,2,3]\n",
+    "my_list=['A string',23,100.232,'o']\n",
+    "print(len(my_list))"
    ]
   },
   {
@@ -570,24 +695,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "aib7Hq_7ZRJw",
     "outputId": "3c99fe61-0ea9-436d-8f19-870d86f5bd39"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "one\n",
+      "['two', 'three', 4, 5]\n",
+      "['one', 'two', 'three', 4, 5, 1, 2, 3]\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a list\n",
-    "\n",
+    "my_list=['one','two','three',4,5]\n",
     "# Grab element at index 0\n",
-    "\n",
+    "print(my_list[0])\n",
     "\n",
     "# Grab index 1 and everything past it\n",
-    "\n",
-    "\n",
-    "# We can also use + to concatenate lists, just like we did for strings.\n"
+    "print(my_list[1:])\n",
+    "list2=[1,2,3]\n",
+    "# We can also use + to concatenate lists, just like we did for strings\n",
+    "my_list=my_list + list2\n",
+    "print(my_list)"
    ]
   },
   {
@@ -636,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2017-09-25T05:47:39.225276Z",
@@ -650,9 +787,19 @@
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "range(0, 10)\n"
+     ]
+    }
+   ],
    "source": [
-    "# create a list containing 10 numbers starting from 0 \n"
+    "# create a list containing 10 numbers starting from 0 \n",
+    "lst=range(0,10)\n",
+    "print(lst)"
    ]
   },
   {
@@ -936,7 +1083,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
